FIX: Agent role issue and In admin role agents page did a minor changes
